# Python_Piscine

./: .gitignore
Module_0/ex00/: Hello.py
Module_0/ex01/: format_ft_time.py
Module_0/ex02/: find_ft_type.py
Module_0/ex03/: NULL_not_found.py
Module_0/ex04/: whatis.py
Module_0/ex05/: building.py
Module_0/ex06/: filterstring.py  ft_filter.py  tester.py
Module_0/ex07/: sos.py
Module_0/ex08/: Loading.py
Module_0/ex09/: README.md  pyproject.toml
Module_0_Array/ex01/: format_ft_time.py
Module_0_Array/ex08/: tester.py
Module_0_Starting/ex03/: NULL_not_found.py
Module_0_Starting/ex04/: whatis.py
Module_0_Starting/ex05/: building.py
Module_0_Starting/ex06/: filterstring.py  ft_filter.py  tester.py
Module_0_Starting/ex07/: sos.py
Module_0_Starting/ex08/: Loading.py
Module_0_Starting/ex09/: LICENSE
Module_0_Starting/ex09/ft_package/: count_in_list.py
Module_1_Array/ex00/: give_bmi.py
Module_1_Array/ex01/: array2D.py
Module_1_Array/ex02/: load_image.py
Module_1_Array/ex03/: zoom.py  zoom2.py
Module_1_Array/ex04/: load_image.py  rotate.py
Module_1_Array/ex05/: pimp_image.py
Module_2_DataTable/ex00/: load_csv.py
Module_2_DataTable/ex01/: aff_life.py
Module_2_DataTable/ex02/: aff_pop.py
Module_2_DataTable/ex03/: projection_life.py
Module_3_OOP/ex00/: tester.py
Module_3_OOP/ex01/: S1E7.py  S1E9.py
Module_3_OOP/ex02/: DiamondTrap.py  S1E7.py
Module_3_OOP/ex03/: ft_calculator.py
